# cmake-unit-test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  demo.cpp
test/: CMakeLists.txt  demo.test.cpp
